feat: implement user module and fetching data, CJBJ7